<resources>
    <string name="app_name">MuscleMate</string>
    <!--login-->
    <string name="forgot_password">Forgot your password?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="loginUsing">Log In Using:</string>
    <!--Tell more-->
    <string name="tellUsMore">Tell us more\nabout yourself</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name</string>
    <string name="height">Height*</string>
    <string name="weight">Weight*</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="next">Next</string>
    <!--Goal choice-->
    <string name="goal_choice">Let\'s choose\nyour goal!</string>
    <string name="continue_button">Continue</string>
    <string name="skip_button">Skip</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="maintenance">Maintenance</string>
    <string name="muscle_gain">Muscle gain</string>
    <!--Bottom navigation-->
    <string name="notifications">notifications</string>
    <string name="workouts">Workouts</string>
    <string name="add">Add</string>
    <string name="tournaments">Tournaments</string>
    <string name="socials">Socials</string>
    <string name="profile">Profile</string>
    <string name="events">Events</string>
    <string name="home">Home</string>
    <!--Friend Request Card -->
    <string name="hubertBubert">Hubert Bubert</string>
    <string name="lvl">Lvl 3</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <!--Fragment friends-->
    <string name="zeroNewRequests">0 new requests</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="hide">Hide</string>
    <string name="zeroFriends">0 friends</string>
    <string name="addFriend">Add friend</string>
    <!--Notification activity-->
    <string name="time">23:17</string>
    <string name="message">Your workout starts in 15 minutes!</string>
    <string name="number7">7</string>
    <!--Profile activity-->
    <string name="hubert">Hubert</string>
    <string name="bubert">Bubert</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="creatine">Creatine</string>
    <string name="g">g</string>
    <string name="settings">Settings</string>
    <string name="supplements">Supplements</string>
    <string name="measurements">Measurements</string>
    <string name="cm">cm</string>
    <string name="waist">Waist</string>
    <string name="application">Application</string>
    <string name="fivegrams">5 g</string>
    <!--Challenge activity-->
    <string name="hoursLeft">15 hours left</string>
    <string name="xp">100 xp</string>
    <string name="challengeTitle">Challenge title</string>
    <string name="participants">7 participants</string>
    <string name="byKamil">by Kamil</string>
    <string name="challenge">Lift 25kg during your lower body workout!</string>
    <string name="daysLeft">6 days left</string>
    <string name="goal">Goal</string>
    <string name="target">Target</string>
    <string name="XP">XP</string>
    <string name="duration">Duration</string>
    <string name="difficulty">Difficulty</string>
    <string name="status">Status</string>
    <string name="goalTitle">Lifted weight</string>
    <string name="kg">25 kg</string>
    <string name="hundred">100</string>
    <string name="replace">Replace</string>
    <!--Workout preview-->
    <string name="stretching">Stretching</string>
    <string name="minutes">25 min</string>
    <string name="exer">2 exercises</string>
    <string name="noEquip">No equipment needed</string>
    <string name="mates">Mates</string>
    <string name="saveAsTemplate">Save as template</string>
    <string name="exerSet">Exercise set</string>
    <string name="equip">Equipment</string>
    <string name="nobodyAssigned">Nobody is assigned</string>
    <string name="delete">Delete</string>
    <string name="start">Start</string>
    <!--Exercise card-->
    <string name="exampleExer">Hamstring stretch</string>
    <string name="exampleMuscleGroup">Legs</string>
    <string name="sets">2 sets</string>
    <string name="set">40kg, 12reps</string>
    <!--Home-->
    <string name="level">Level 3</string>
    <string name="xpLeft">40xp to level 4!</string>
    <!--Add workout-->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="invite">Invite friends</string>
    <string name="workoutName">Workout name</string>
    <string name="date">Date</string>
    <string name="timeWord">Time</string>
    <string name="search">Search</string>
    <string name="dumbbells">40kg dumbbells</string>
    <!--Completed challenges-->
    <string name="totalCompletedChallenges">Total completed challenges</string>
    <!--Experience-->
    <string name="totalExPoints">Total experience points</string>
    <!--Workout card-->
    <string name="randomDate">7 March, 2024</string>
</resources>
